# AOC2025

./: .gitignore  CMakeLists.txt  README.md
day1/: main.c
day2/: CMakeOptions.txt  main.c
day3/: main.c
